apps/base/papra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: papra
  labels:
    app.kubernetes.io/name: papra
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
